2008-01-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.3 ===

2008-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Additions

2008-01-14  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.2 ===

2008-01-11  Matthias Clasen  <mclasen@redhat.com>
	
	* glib/*: Hook up gtestutils docs.
	
2008-01-08  Alexander Larsson  <alexl@redhat.com>

        * gio/gio-docs.xml:
        * gio/migrating.xml:
	Remove GDirectoryMonitor refernces

008-01-07  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.1 ===

2008-01-07  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt:
	* gio/gio-sections.txt: Update to api changes

2008-01-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/building.sgml: Document new dependencies and 
	configure options.

2007-12-31  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gio/migrating.xml: Fixed invalid XML entity

2007-12-31  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* glib/tmpl/macros_misc.sgml: Fixed typo

2007-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gio/Makefile.am:
	* gio/gio-sections.txt: Updates

2007-12-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/spawn.sgml: Add a warning about allowed functions
	between fork() and exec().

2007-12-24  Benjamin Otte  <otte@gnome.org>

	* glib/tmpl/timers.sgml: Add a warning about g_thread_init
	invalidating timers. (#491218)

2007-12-24  Mathias Hasselmann  <mathias@openismus.com>

	Fix typo in g_try_new0 docs (#505195, Felix Riemann).

	* docs/reference/glib/tmpl/memory.sgml: Reference
	n_structs, instead of non-existant n_counts argument.

2007-12-22  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tmpl/gtypemodule.sgml: Fix a typo

2007-12-20  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.0 ===

2007-12-19  Alexander Larsson  <alexl@redhat.com>

	* gio/migrating.xml:
	* gio/overview.xml:
	Some minor fixes and additions.
	
2007-12-17  Matthias Clasen <mclasen@redhat.com>
