@@ -1,3 +1,8 @@
+2008-01-23  Matthias Clasen  <mclasen@redhat.com>
+
+	* gio/overview.xml: Document environment
+	variables used by GIO.
+
 2008-01-21  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.15.3 ===
